minor alignment fixes

--- a/static/stylemain.css
+++ b/static/stylemain.css
@@ -15,8 +15,8 @@ body{
     flex: 1 0 100%;
     min-width: 95vw;
     max-width: 98vw;
-    min-height: 100px;
-    max-height: 100px;
+    min-height: 110px;
+    max-height: 110px;
 }
 
 h1,h2{
@@ -35,7 +35,7 @@ h2{
 h3{
     font-size: 39px;
     color: white;
-    padding-bottom: 11px;
+    padding-bottom: 9px;
     padding-right: 8px;
 }
 
@@ -146,7 +146,13 @@ p{
 
 .left-header{
     flex-basis: 90%;
-    padding-top: 20px;
+    padding-top: 22px;
+    padding-left: 44px; 
+}
+
+.left-header-notes{
+    flex-basis: 90%;
+    padding-top: 33px;
     padding-left: 44px; 
 }
 
@@ -158,7 +164,7 @@ p{
     border-radius: 25px;
     padding: 15px;
     padding-bottom: 0px;
-    padding-top: 10px;
+    padding-top: 5px;
     
     font-family: 'Quicksand', sans-serif;
     font-style: normal;
